--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 03:39:00 PM</p>
+    <p class="lastupdate">09/04/2020 03:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">102.3&#176;F</td>
+        <td class="data">103.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">102.3&#176;F</td>
+        <td class="data">103.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">102.3&#176;F</td>
+        <td class="data">103.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.5&#176;F</td>
+        <td class="data">46.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">16%</td>
+        <td class="data">15%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.846 inHg (-0.060)</td>
+        <td class="data">29.847 inHg (-0.056)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph ENE (68&#176;)</td>
+        <td class="data">5 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.2&#176;F</td>
+        <td class="data">81.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">42%</td>
+        <td class="data">41%</td>
       </tr>
     </tbody>
   </table>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:38:38 PM">
-            102.3</span><br/>
+          <span title="03:42:56 PM">
+            103.0</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:38:38 PM (Friday)">
-            102.3</span><br/>
+          <span title="03:42:56 PM (Friday)">
+            103.0</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/04/2020 03:38:38 PM">
-            102.3</span><br/>
+          <span title="09/04/2020 03:42:56 PM">
+            103.0</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:38:38 PM" class="hival">
-            102.3</span>
+          <span title="03:42:56 PM" class="hival">
+            103.0</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:38:38 PM (Friday)" class="hival">
-            102.3</span>
+          <span title="03:42:56 PM (Friday)" class="hival">
+            103.0</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/04/2020 03:38:38 PM" class="hival">
-            102.3</span>
+          <span title="09/04/2020 03:42:56 PM" class="hival">
+            103.0</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:05:02 AM">
             29.967</span><br/>
-          <span title="03:31:02 PM">
-            29.844</span>
+          <span title="03:39:02 PM">
+            29.843</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          6
+          7
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          10
+          11
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:38:02 PM">
-            81.2</span><br/>
+          <span title="03:43:02 PM">
+            81.6</span><br/>
           <span title="06:35:01 AM">
             68.0</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="06:25:01 AM">
             52</span><br/>
-          <span title="12:00:01 AM">
-            42</span>
+          <span title="03:39:02 PM">
+            41</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:10:02 AM (Wednesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 0 hours, 52 minutes</td>
+      <td class="data">3 days, 0 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 0 hours, 52 minutes</td>
+      <td class="data">3 days, 0 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
