--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 03:44:00 PM</p>
+    <p class="lastupdate">09/04/2020 03:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">103.0&#176;F</td>
+        <td class="data">102.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">103.0&#176;F</td>
+        <td class="data">102.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">103.0&#176;F</td>
+        <td class="data">102.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.4&#176;F</td>
+        <td class="data">47.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">15%</td>
+        <td class="data">16%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.847 inHg (-0.056)</td>
+        <td class="data">29.849 inHg (-0.048)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph N (0&#176;)</td>
+        <td class="data">3 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">81.6&#176;F</td>
+        <td class="data">82.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:43:02 PM">
-            81.6</span><br/>
+          <span title="03:48:02 PM">
+            82.4</span><br/>
           <span title="06:35:01 AM">
             68.0</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 0 hours, 57 minutes</td>
+      <td class="data">3 days, 1 hour, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 0 hours, 57 minutes</td>
+      <td class="data">3 days, 1 hour, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
