--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 03:49:00 PM</p>
+    <p class="lastupdate">09/04/2020 03:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">102.3&#176;F</td>
+        <td class="data">102.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">102.3&#176;F</td>
+        <td class="data">102.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">102.3&#176;F</td>
+        <td class="data">102.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.5&#176;F</td>
+        <td class="data">47.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.849 inHg (-0.048)</td>
+        <td class="data">29.840 inHg (-0.054)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNE (22&#176;)</td>
+        <td class="data">2 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">82.4&#176;F</td>
+        <td class="data">83.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">41%</td>
+        <td class="data">40%</td>
       </tr>
     </tbody>
   </table>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:05:02 AM">
             29.967</span><br/>
-          <span title="03:39:02 PM">
-            29.843</span>
+          <span title="03:51:02 PM">
+            29.840</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:48:02 PM">
-            82.4</span><br/>
+          <span title="03:53:02 PM">
+            83.2</span><br/>
           <span title="06:35:01 AM">
             68.0</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="06:25:01 AM">
             52</span><br/>
-          <span title="03:39:02 PM">
-            41</span>
+          <span title="03:53:02 PM">
+            40</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:10:02 AM (Wednesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 1 hour, 2 minutes</td>
+      <td class="data">3 days, 1 hour, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 1 hour, 2 minutes</td>
+      <td class="data">3 days, 1 hour, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
