--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 04:09:00 PM</p>
+    <p class="lastupdate">09/04/2020 04:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -62,19 +62,19 @@
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.4&#176;F</td>
+        <td class="data">44.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">15%</td>
+        <td class="data">14%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.838 inHg (-0.051)</td>
+        <td class="data">29.834 inHg (-0.052)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NE (45&#176;)</td>
+        <td class="data">3 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">85.2&#176;F</td>
+        <td class="data">85.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:42:56 PM">
-            103.0</span><br/>
+          <span title="04:10:26 PM">
+            103.1</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:42:56 PM (Friday)">
-            103.0</span><br/>
+          <span title="04:10:26 PM (Friday)">
+            103.1</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/04/2020 03:42:56 PM">
-            103.0</span><br/>
+          <span title="09/04/2020 04:10:26 PM">
+            103.1</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="03:42:56 PM" class="hival">
-            103.0</span>
+          <span title="04:10:26 PM" class="hival">
+            103.1</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="03:42:56 PM (Friday)" class="hival">
-            103.0</span>
+          <span title="04:10:26 PM (Friday)" class="hival">
+            103.1</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/04/2020 03:42:56 PM" class="hival">
-            103.0</span>
+          <span title="09/04/2020 04:10:26 PM" class="hival">
+            103.1</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -271,20 +271,20 @@
         <td class="data new_row hilo_day">
           <span title="06:36:23 AM">
             83</span><br/>
-          <span title="03:16:34 PM">
-            15</span>
+          <span title="04:10:22 PM">
+            14</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
             93</span><br/>
-          <span title="03:16:34 PM (Friday)">
-            15</span>
+          <span title="04:10:22 PM (Friday)">
+            14</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
             93</span><br/>
-          <span title="09/04/2020 03:16:34 PM">
-            15</span>
+          <span title="09/04/2020 04:10:22 PM">
+            14</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="06/21/2020 07:07:00 AM">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:05:02 AM">
             29.967</span><br/>
-          <span title="04:05:02 PM">
-            29.835</span>
+          <span title="04:10:02 PM">
+            29.834</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -317,8 +317,8 @@
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
             30.063</span><br/>
-          <span title="09/04/2020 04:05:02 PM">
-            29.835</span>
+          <span title="09/04/2020 04:10:02 PM">
+            29.834</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="07/04/2020 08:07:00 AM">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 1 hour, 22 minutes</td>
+      <td class="data">3 days, 1 hour, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 1 hour, 22 minutes</td>
+      <td class="data">3 days, 1 hour, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
