--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 04:14:00 PM</p>
+    <p class="lastupdate">09/04/2020 04:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">103.0&#176;F</td>
+        <td class="data">102.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">103.0&#176;F</td>
+        <td class="data">102.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">103.0&#176;F</td>
+        <td class="data">102.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.5&#176;F</td>
+        <td class="data">46.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">14%</td>
+        <td class="data">15%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.834 inHg (-0.052)</td>
+        <td class="data">29.834 inHg (-0.053)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNW (338&#176;)</td>
+        <td class="data">2 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -237,7 +237,7 @@
         <td class="data new_row hilo_day">
           <span title="10:05:12 AM">
             56.7</span><br/>
-          <span title="01:20:26 PM">
+          <span title="04:18:28 PM">
             44.2</span>
         </td>
         <td class="data new_row hilo_week">
@@ -249,7 +249,7 @@
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/04/2020 01:20:26 PM">
+          <span title="09/04/2020 04:18:28 PM">
             44.2</span>
         </td>
         <td class="data new_row hilo_year">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          7
+          6
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          11
+          10
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 1 hour, 27 minutes</td>
+      <td class="data">3 days, 1 hour, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 1 hour, 27 minutes</td>
+      <td class="data">3 days, 1 hour, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
