--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 04:24:00 PM</p>
+    <p class="lastupdate">09/04/2020 04:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">103.0&#176;F</td>
+        <td class="data">103.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">103.0&#176;F</td>
+        <td class="data">103.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">103.0&#176;F</td>
+        <td class="data">103.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.5&#176;F</td>
+        <td class="data">45.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.835 inHg (-0.052)</td>
+        <td class="data">29.835 inHg (-0.050)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNE (22&#176;)</td>
+        <td class="data">1 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">85.0&#176;F</td>
+        <td class="data">85.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:10:26 PM">
-            103.1</span><br/>
+          <span title="04:28:12 PM">
+            103.6</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:10:26 PM (Friday)">
-            103.1</span><br/>
+          <span title="04:28:12 PM (Friday)">
+            103.6</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/04/2020 04:10:26 PM">
-            103.1</span><br/>
+          <span title="09/04/2020 04:28:12 PM">
+            103.6</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:10:26 PM" class="hival">
-            103.1</span>
+          <span title="04:28:12 PM" class="hival">
+            103.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:10:26 PM (Friday)" class="hival">
-            103.1</span>
+          <span title="04:28:12 PM (Friday)" class="hival">
+            103.6</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/04/2020 04:10:26 PM" class="hival">
-            103.1</span>
+          <span title="09/04/2020 04:28:12 PM" class="hival">
+            103.6</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 1 hour, 37 minutes</td>
+      <td class="data">3 days, 1 hour, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 1 hour, 37 minutes</td>
+      <td class="data">3 days, 1 hour, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
