--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 04:34:00 PM</p>
+    <p class="lastupdate">09/04/2020 04:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">104.2&#176;F</td>
+        <td class="data">104.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">104.2&#176;F</td>
+        <td class="data">104.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">104.2&#176;F</td>
+        <td class="data">104.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.5&#176;F</td>
+        <td class="data">45.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.834 inHg (-0.051)</td>
+        <td class="data">29.835 inHg (-0.047)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph E (90&#176;)</td>
+        <td class="data">2 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">85.4&#176;F</td>
+        <td class="data">85.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:33:40 PM">
-            104.2</span><br/>
+          <span title="04:38:06 PM">
+            104.5</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:33:40 PM (Friday)">
-            104.2</span><br/>
+          <span title="04:38:06 PM (Friday)">
+            104.5</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/04/2020 04:33:40 PM">
-            104.2</span><br/>
+          <span title="09/04/2020 04:38:06 PM">
+            104.5</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:33:40 PM" class="hival">
-            104.2</span>
+          <span title="04:38:06 PM" class="hival">
+            104.5</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:33:40 PM (Friday)" class="hival">
-            104.2</span>
+          <span title="04:38:06 PM (Friday)" class="hival">
+            104.5</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/04/2020 04:33:40 PM" class="hival">
-            104.2</span>
+          <span title="09/04/2020 04:38:06 PM" class="hival">
+            104.5</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:33:02 PM">
-            85.4</span><br/>
+          <span title="04:38:02 PM">
+            85.8</span><br/>
           <span title="06:35:01 AM">
             68.0</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 1 hour, 47 minutes</td>
+      <td class="data">3 days, 1 hour, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 1 hour, 47 minutes</td>
+      <td class="data">3 days, 1 hour, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
