--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 04:39:00 PM</p>
+    <p class="lastupdate">09/04/2020 04:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,23 +50,23 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">104.5&#176;F</td>
+        <td class="data">104.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">104.5&#176;F</td>
+        <td class="data">104.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">104.5&#176;F</td>
+        <td class="data">104.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.7&#176;F</td>
+        <td class="data">43.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">14%</td>
+        <td class="data">13%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
@@ -74,7 +74,7 @@
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph ENE (68&#176;)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">85.8&#176;F</td>
+        <td class="data">86.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">38%</td>
+        <td class="data">37%</td>
       </tr>
     </tbody>
   </table>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:38:06 PM">
-            104.5</span><br/>
+          <span title="04:41:52 PM">
+            104.7</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:38:06 PM (Friday)">
-            104.5</span><br/>
+          <span title="04:41:52 PM (Friday)">
+            104.7</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/04/2020 04:38:06 PM">
-            104.5</span><br/>
+          <span title="09/04/2020 04:41:52 PM">
+            104.7</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:38:06 PM" class="hival">
-            104.5</span>
+          <span title="04:41:52 PM" class="hival">
+            104.7</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:38:06 PM (Friday)" class="hival">
-            104.5</span>
+          <span title="04:41:52 PM (Friday)" class="hival">
+            104.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/04/2020 04:38:06 PM" class="hival">
-            104.5</span>
+          <span title="09/04/2020 04:41:52 PM" class="hival">
+            104.7</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="10:05:12 AM">
             56.7</span><br/>
-          <span title="04:18:28 PM">
-            44.2</span>
+          <span title="04:43:42 PM">
+            43.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:24:38 PM (Wednesday)">
@@ -249,8 +249,8 @@
         <td class="data new_row hilo_month">
           <span title="09/02/2020 01:24:38 PM">
             59.6</span><br/>
-          <span title="09/04/2020 04:18:28 PM">
-            44.2</span>
+          <span title="09/04/2020 04:43:42 PM">
+            43.9</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/14/2020 10:10:13 AM">
@@ -271,20 +271,20 @@
         <td class="data new_row hilo_day">
           <span title="06:36:23 AM">
             83</span><br/>
-          <span title="04:10:22 PM">
-            14</span>
+          <span title="04:43:42 PM">
+            13</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
             93</span><br/>
-          <span title="04:10:22 PM (Friday)">
-            14</span>
+          <span title="04:43:42 PM (Friday)">
+            13</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/03/2020 06:37:07 AM">
             93</span><br/>
-          <span title="09/04/2020 04:10:22 PM">
-            14</span>
+          <span title="09/04/2020 04:43:42 PM">
+            13</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="06/21/2020 07:07:00 AM">
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          188
+          187
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:38:02 PM">
-            85.8</span><br/>
+          <span title="04:43:02 PM">
+            86.4</span><br/>
           <span title="06:35:01 AM">
             68.0</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="06:25:01 AM">
             52</span><br/>
-          <span title="04:06:02 PM">
-            38</span>
+          <span title="04:42:02 PM">
+            37</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:10:02 AM (Wednesday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 1 hour, 52 minutes</td>
+      <td class="data">3 days, 1 hour, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 1 hour, 52 minutes</td>
+      <td class="data">3 days, 1 hour, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
